# miyagi

./: .gitignore  Cargo.toml  MIYAGI-BANKAI-PORT-PROGRESS.md  MIYAGI-BANKAI-PORT-SPRINT-PLAN.md  README.md
patches/: calculus_generalized_v1.json  calculus_v1.json  patch_math_v1.json
skills/miyagi-author-probes/: SKILL.md
skills/miyagi-author-probes/agents/: openai.yaml
skills/miyagi-author-probes/references/: probe-schema.md
skills/miyagi-benchmark-patch/: SKILL.md
skills/miyagi-benchmark-patch/agents/: openai.yaml
skills/miyagi-benchmark-patch/references/: dataset-schema.md
skills/miyagi-compose-patches/: SKILL.md
skills/miyagi-compose-patches/agents/: openai.yaml
skills/miyagi-correct-errors/: SKILL.md
skills/miyagi-correct-errors/agents/: openai.yaml
skills/miyagi-correct-errors/references/: error-cases.md
skills/miyagi-diagnose-regression/: SKILL.md
skills/miyagi-diagnose-regression/agents/: openai.yaml
skills/miyagi-evaluate-patch/: SKILL.md
skills/miyagi-inject-knowledge/: SKILL.md
skills/miyagi-inspect-model/: SKILL.md
skills/miyagi-preserve-capabilities/: SKILL.md
skills/miyagi-search-patch/: SKILL.md
skills/miyagi-select-patch/: SKILL.md
skills/miyagi-specialize-domain/: SKILL.md
skills/miyagi-suppress-behavior/: SKILL.md
skills/miyagi-test-generalization/: SKILL.md
src/: architecture.rs  backend.rs  cli.rs  dataset.rs  error.rs  evaluation.rs  fitness.rs  lib.rs  main.rs  patch.rs  probe.rs  search.rs
tests/: cli.rs  model_backend.rs  patch_artifacts.rs  search_engine.rs
tests/fixtures/: smoke_dataset.json
(+18 files in other folders)
