[package]
name = "miyagi"
version = "0.1.2"
edition = "2024"
description = "Sparse XOR adaptation and search for true binary GGUF language models"
readme = "README.md"
repository = "https://github.com/Apothic-AI/miyagi"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
wwama = { version = "=0.2.4", path = "../wwama", default-features = false, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.20"

[features]
default = []
cuda = ["wwama/cuda"]
vulkan = ["wwama/vulkan"]

[[bin]]
name = "miyagi"
path = "src/main.rs"
